--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .node.node-terminal {
-    fill: #ff9a97;
+    fill: #008837;
     stroke: #fff;
 }
 
@@ -31,8 +31,28 @@
     cursor: help;
 }
 
-.axis path,
-.axis line {
+.y-axis path,
+.y-axis line {
     fill: none;
     stroke-width: 0;
 }
+
+.x-axis path,
+.x-axis line {
+    fill: none;
+    stroke-width: 0;
+}
+
+.diagram_header {
+    position: fixed;
+}
+
+.diagram_header_background {
+    position: fixed;
+    background-color: white;
+    filter: opacity(0.90);
+    border-bottom: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+
